--- a/assets/css/topbar.virtual.css
+++ b/assets/css/topbar.virtual.css
@@ -160,6 +160,7 @@
   z-index: -1;
 }
 
+/* Timeline */
 .timeline {
   position: relative;
   display: block;
@@ -179,6 +180,7 @@
   height: 95%;
   background-color: #e3e5e9;
 }
+
 
 .timeline li {
   position: relative;
@@ -206,6 +208,39 @@
   color: #fff;
   font-weight: 500;
   border-radius: 30px 0 60px 30px;
+}
+
+@media (min-width: 768px) {
+
+  .timeline.timeline-left::before {
+      left: unset;
+      right: 0;
+  }
+  .timeline li {
+      padding-right: 0px;
+      padding-left: 30px;
+  }
+  .timeline-title-left {
+      text-align: right;
+  }    
+  .timeline-title-right {
+      margin-top: -140px;
+  }
+  .timeline.timeline-left li {
+      padding-right: 30px;
+      padding-left: 0px;
+  }
+  .timeline.timeline-left li .title {
+      border-radius: 0px 30px 30px 60px;
+      transform: translate(-100%, 0);
+      margin-left: 100%;
+      text-align: right;
+  }
+  .timeline.timeline-left li::before {
+      left: unset;
+      right: -8px;
+  }
+  
 }
 
 .timeline li .details {
@@ -291,9 +326,12 @@
 .testi-carousel .item .img-place {
   max-width: 350px;
   height: 300px;
-  background-color: #f4f5f8;
+  background-color: unset;
   border-radius: 4px;
   overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .testi-carousel .item .caption {
