--- a/assets/css/virtual.css
+++ b/assets/css/virtual.css
@@ -1084,9 +1084,14 @@ a:hover, a:active {
     bottom: 0;
     padding: 12px 16px;
     width: 100%;
-    background-color: #323131;
+    background-color: #323131ab;
     color: #fff;
     z-index: 11;
+    transition: background-color 0.3s ease;
+}
+
+.grid-item:hover .img-caption {
+    background-color: #323131;
 }
 
 .grid-item .img-caption p {
