--- a/assets/css/topbar.virtual.css
+++ b/assets/css/topbar.virtual.css
@@ -325,7 +325,7 @@
 
 .testi-carousel .item .img-place {
   max-width: 350px;
-  height: 300px;
+  height: 100%;
   background-color: unset;
   border-radius: 4px;
   overflow: hidden;
